Fix a race condition when merging non-animatied layer over an animated one

BUG:476472